--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
-spring.resources.static-locations=file\:E\:\\UPLOADS
+spring.web.resources.static-locations=file:/E\:\\UPLOADS,/classpath:/static/,classpath:/META-INF/resources/,classpath:/resources/
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
